Add authentication method
