# src/modules/authentications/validation-schema.ts
@@ -1,0 +1,8 @@
+import Joi from "joi";
+
+const schema = Joi.object({
+	username: Joi.string().required(),
+	password: Joi.string().required(),
+}).required();
+
+export default schema;
