# src/types/session.ts
@@ -1,0 +1,5 @@
+type Session = {
+	username: string;
+};
+
+export default Session;
